<?xml version="1.0"?>

<resources>

    <string name="app_name">BILL</string>

    <string name="start_up_menu">start up menu</string>

    <string name="send_icon">send icon</string>

    <string name="itemname">ItemName</string>

    <string name="amount">Amount</string>

    <string name="price">Price</string>

    <string name="no">No</string>

    <string name="send_button">send_button</string>

    <string name="enter_customer_s_name">Enter Customer\'s Name</string>

    <string name="_1">1.</string>

    <string name="edit_desc">edit desc</string>

    <string name="adds_the_items">Adds the items</string>

    <string name="add">ADD</string>

    <string name="_2">2</string>

    <string name="total">Total</string>

    <string name="_3">3</string>

    <string name="_4">4</string>

    <string name="_5">5</string>

    <string name="_6">6</string>

    <string name="_7">7</string>

    <string name="_8">8</string>

    <string name="_9">9</string>

    <string name="_10">10</string>

    <string name="_11">11</string>

    <string name="_12">12</string>

    <string name="_13">13</string>

    <string name="_14">14</string>

    <string name="_15">15</string>

    <string name="new_menu">New</string>

    <string name="creates_new_items">creates new items</string>

    <string name="settings">Settings</string>

    <string name="statistics">Statistics</string>

    <string name="about">About</string>

    <string name="help">Help</string>

    <string name="break_">Break</string>

    <string name="appearance">Appearance</string>
    <string name="file_system">File System</string>
    <string name="auto_save">Auto save</string>
    <string name="font">Font</string>
    <string name="language">Language</string>
    <string name="graph">Graph</string>
    <string name="bill_location">Bill location</string>
    <string name="templates">Templates</string>
    <string name="storage">Storage</string>
    <string name="security">Security</string>
    <string name="set_password">Set Password</string>
    <string name="customer_name">Customer Name</string>
    <string name="update">Update</string>
    <string name="show_your_ads_here">Show your ads Here!</string>
    <string name="fill_at_least_1_row">Fill At Least 1 Row</string>
    <string name="my_bills">My Bills</string>
    <string name="enter_client_phone_number">Enter Client Phone Number</string>
    <string name="search_here">Search here</string>
    <string name="saved">Saved</string>
    <string name="powered_by_ethioware">POWERED BY ETHiOWARE</string>
    <string name="sent_successfully">Sent Successfully</string>
    <string name="updated">Updated!</string>
    <string name="themes">Themes</string>
    <string name="c_1">1</string>
    <string name="decimal">.</string>
    <string name="_0">0</string>
    <string name="shows_history_of_results">shows history of results</string>

</resources>